<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/success_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:scaleType="centerInside"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:src="@android:drawable/ic_menu_myplaces"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_full_name"
                style="@style/TextEditStyle"
                android:hint="@string/hint_user_s_full_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="Full name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_date_of_birthday"
                style="@style/TextEditStyle"
                android:hint="@string/hint_date_of_birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toBottomOf="@+id/text_full_name"
                app:startIconDrawable="@android:drawable/ic_menu_month">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="30 February 2000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_phone_number"
                style="@style/TextEditStyle"
                android:hint="@string/hint_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_call"
                app:layout_constraintTop_toBottomOf="@+id/text_date_of_birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="+7-999-111-11-11" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_call"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:text="@string/button_call"
                android:layout_height="wrap_content"
                app:icon="@android:drawable/sym_call_outgoing"
                app:layout_constraintBottom_toBottomOf="@id/text_phone_number"
                app:layout_constraintEnd_toStartOf="@id/text_phone_number"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="@id/text_phone_number" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_image_and_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="image,text_phone_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_country"
                style="@style/TextEditStyle"
                android:hint="@string/hint_country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_image_and_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="Russia" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_city"
                style="@style/TextEditStyle"
                android:hint="@string/hint_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="Best City" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_street"
                style="@style/TextEditStyle"
                android:hint="@string/hint_street"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="Best Street" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_coordinate_latitude"
                style="@style/TextEditStyle"
                android:layout_marginStart="@dimen/margin_text_edit"
                android:layout_marginEnd="@dimen/margin_text_edit"
                android:hint="@string/hint_latitude"
                app:layout_constraintEnd_toStartOf="@+id/text_coordinate_longitude"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/button_map"
                app:layout_constraintTop_toBottomOf="@+id/text_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="100.0000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_coordinate_longitude"
                style="@style/TextEditStyle"
                android:layout_marginStart="@dimen/margin_text_edit"
                android:layout_marginEnd="@dimen/margin_text_edit"
                android:hint="@string/hint_longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_coordinate_latitude"
                app:layout_constraintTop_toBottomOf="@+id/text_street">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tool:text="100.0000" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_map"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_map"
                app:icon="@android:drawable/ic_menu_mapmode"
                app:layout_constraintBottom_toBottomOf="@id/text_coordinate_longitude"
                app:layout_constraintEnd_toStartOf="@id/text_coordinate_latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_coordinate_longitude" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reload_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:src="@android:drawable/stat_notify_sync" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/loading_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/progress_bar_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/error_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_textview_stub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>

</FrameLayout>
